--- a/Frontend/Gestion_DPI/documentation/components/HeaderComponent.html
+++ b/Frontend/Gestion_DPI/documentation/components/HeaderComponent.html
@@ -455,7 +455,7 @@ export class HeaderComponent implements OnInit {
   }
 
   backToLandingPage() : void {
-    this.router.navigate([&#x27;&#x27;]);
+    this.router.navigate([&#x27;/login&#x27;]);
   }
 }
 </code></pre>
