--- a/Frontend/Gestion_DPI/documentation/components/CreationDPIComponent.html
+++ b/Frontend/Gestion_DPI/documentation/components/CreationDPIComponent.html
@@ -106,10 +106,6 @@
                 role="tab" id="templateData-tab" data-bs-toggle="tab" data-link="template">Template</a>
         </li>
         <li class="nav-item">
-            <a href="#styleData" class="nav-link"
-                role="tab" id="styleData-tab" data-bs-toggle="tab" data-link="style">Styles</a>
-        </li>
-        <li class="nav-item">
             <a href="#tree" class="nav-link"
                 role="tab" id="tree-tab" data-bs-toggle="tab" data-link="dom-tree">DOM Tree</a>
         </li>
@@ -158,10 +154,6 @@
                 </td>
             </tr>
 
-            <tr>
-                <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./creation-dpi.component.css</code></td>
-            </tr>
 
 
 
@@ -172,6 +164,10 @@
 
 
 
+            <tr>
+                <td class="col-md-3">styleUrl</td>
+                <td class="col-md-9"><code>./creation-dpi.component.css</code></td>
+            </tr>
 
 
 
@@ -310,8 +306,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="20"
-                                    class="link-to-prism">src/app/creation-dpi/creation-dpi.component.ts:20</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="21"
+                                    class="link-to-prism">src/app/creation-dpi/creation-dpi.component.ts:21</a></div>
                         </td>
                     </tr>
 
@@ -413,7 +409,7 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>[&quot;Nom&quot;, &quot;Prénom&quot;, &quot;Numéro de sécurité sociale&quot;, &quot;Date de naissance&quot;, &quot;Adresse&quot;, &quot;Téléphone&quot;, &quot;Mutuelle&quot;, &quot;Médecin traitant&quot;, &quot;Personne à contacter&quot;]</code>
+                        <i>Default value : </i><code>[&quot;Nom&quot;, &quot;Prenom&quot;, &quot;Numero de securité sociale&quot;, &quot;Date de naissance&quot;, &quot;Adresse&quot;, &quot;Téléphone&quot;, &quot;Mutuelle&quot;, &quot;Medecin traitant&quot;, &quot;Personne a contacter&quot;]</code>
                     </td>
                 </tr>
                     <tr>
@@ -475,7 +471,7 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>&quot;Création du DPI&quot;</code>
+                        <i>Default value : </i><code>&quot;Creation du DPI&quot;</code>
                     </td>
                 </tr>
                     <tr>
@@ -496,59 +492,50 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component } from &#x27;@angular/core&#x27;;
 import { HeaderComponent } from &quot;../header-component/header.component&quot;;
 import { CreationDPIService } from &#x27;../creation-dpi.service&#x27;;
-import { FormsModule } from &#x27;@angular/forms&#x27;;
+import { FormsModule } from &#x27;@angular/forms&#x27;; 
 
 @Component({
   selector: &#x27;app-creation-dpi&#x27;,
   imports: [HeaderComponent, FormsModule],
   templateUrl: &#x27;./creation-dpi.component.html&#x27;,
-  styleUrls: [&#x27;./creation-dpi.component.css&#x27;]
+  styleUrl: &#x27;./creation-dpi.component.css&#x27;
 })
 export class CreationDPIComponent {
-  title &#x3D; &quot;Création du DPI&quot;;
-  labels &#x3D; [&quot;Nom&quot;, &quot;Prénom&quot;, &quot;Numéro de sécurité sociale&quot;, &quot;Date de naissance&quot;, &quot;Adresse&quot;, &quot;Téléphone&quot;, &quot;Mutuelle&quot;, &quot;Médecin traitant&quot;, &quot;Personne à contacter&quot;];
-  buttons &#x3D; [&quot;Ajouter le DPI&quot;, &quot;Annuler&quot;];
-  names &#x3D; [&quot;nom&quot;, &quot;prenom&quot;, &quot;nss&quot;, &quot;ddn&quot;, &quot;adresse&quot;, &quot;num_tel&quot;, &quot;mutuelle&quot;, &quot;medecin&quot;, &quot;contact&quot;];
+title&#x3D;&quot;Creation du DPI&quot;;
+labels &#x3D; [&quot;Nom&quot;, &quot;Prenom&quot;, &quot;Numero de securité sociale&quot;, &quot;Date de naissance&quot;, &quot;Adresse&quot;, &quot;Téléphone&quot;, &quot;Mutuelle&quot;, &quot;Medecin traitant&quot;, &quot;Personne a contacter&quot;];
+buttons &#x3D; [&quot;Ajouter le DPI&quot;, &quot;Annuler&quot;]
+names &#x3D; [&quot;nom&quot;, &quot;prenom&quot;, &quot;nss&quot;, &quot;ddn&quot;, &quot;adresse&quot;, &quot;num_tel&quot;, &quot;mutuelle&quot;, &quot;medecin&quot;, &quot;contact&quot;];
 
-  constructor(private creationDPIService: CreationDPIService) { }
+constructor(private creationDPIService: CreationDPIService) { }
 
-  onSubmit(formData: any): void {
-    // Log the form data to verify its structure
-    console.log(&#x27;Form Data:&#x27;, formData);
 
-    // Prepare the data object for the API call
-    const dpiData &#x3D; {
-      nom_patient: formData.nom,
-      prenom_patient: formData.prenom,
-      nss: formData.nss,
-      date_de_naissance: formData.ddn,
-      adresse: formData.adresse,
-      telephone: formData.num_tel,
-      mutuelle: formData.mutuelle,
-      personne_a_contacter: formData.contact,
-      nom_complet_medecin: formData.medecin
-    };
+onSubmit(formData: any):void{
+  const dpiData &#x3D; {
+    nom_patient: formData.nom,
+    prenom_patient: formData.prenom,
+    nss: formData.nss,
+    date_de_naissance: formData.ddn,
+    adresse: formData.adresse,
+    telephone: formData.num_tel,
+    mutuelle: formData.mutuelle,
+    personne_a_contacter: formData.contact,
+    nom_complet_medecin: formData.medecin
+  };
+  this.creationDPIService.createDPI(dpiData).subscribe({
+    next: (response) &#x3D;&gt; {
+      console.log(&#x27;DPI créé avec succès:&#x27;, response);
+      localStorage.setItem(&#x27;dpi_id&#x27;, response.dpi_id);
+      alert(&#x27;Le dossier a ete cree avec succes&#x27;);
+      window.location.reload();
+    },
+    error: (err) &#x3D;&gt; {
+      console.error(&#x27;Erreur lors de la création du DPI:&#x27;, err);
+    }
+  });
 
-    console.log(&#x27;DPI Data:&#x27;, dpiData);
 
-    // Call the service to create the DPI
-    this.creationDPIService.createDPI(dpiData).subscribe({
-      next: (response) &#x3D;&gt; {
-        console.log(&#x27;DPI créé avec succès:&#x27;, response);
-        localStorage.setItem(&#x27;dpi_id&#x27;, response.dpi_id);
-        alert(&#x27;Le dossier a été créé avec succès.&#x27;);
-        window.location.reload();
-      },
-      error: (err) &#x3D;&gt; {
-        console.error(&#x27;Erreur lors de la création du DPI:&#x27;, err);
-        if (err.error) {
-          alert(&#x60;Erreur : ${err.error.message || &#x27;Problème de validation ou serveur.&#x27;}&#x60;);
-        } else {
-          alert(&#x27;Une erreur est survenue. Veuillez réessayer.&#x27;);
-        }
-      }
-    });
-  }
+}
+
 }
 </code></pre>
     </div>
@@ -605,121 +592,6 @@ export class CreationDPIComponent {
 &lt;/div&gt;</code></pre>
     </div>
 
-    <div class="tab-pane fade " id="styleData">
-                <p class="comment">
-                    <code>./creation-dpi.component.css</code>
-                </p>
-                <pre class="line-numbers"><code class="language-scss"> @import url(../../styles.css);
-
-.main{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    min-height: 100vh;
-    margin: 5%;
-    box-shadow: -4px -4px 5px rgba(0, 0, 0, 0.2), 4px 4px 10px rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-}
-.info-card{
-   grid-column: span 2;
-   padding: 5%;
-   background-color: rgb(237, 252, 250);
-   border-top-left-radius: 10px;
-   border-bottom-left-radius: 10px;
-}
-form{
-    font-family: var(--font-family-text);
-    color: var(--Port-gore);
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin-top: 13%;
-    gap: 7%;
-    place-content: center;
-}
-.medecin .nom .prenom .nns .ddn .adresse .num-tel .mutuelle .contact{
-    display: grid;
-}
-input{
-    font-family: var(--font-family-text);
-    padding: 2.5%;
-    border: 2px solid var(--Port-gore);
-    border-radius: 5px;
-    width: 100%;
-}
-h2{
-    font-family: var(--font-family-title);
-    font-weight: 700;
-    color: var(--Port-gore);
-    font-size: 1.8rem;
-    text-align: center;
-} 
-img{
-    width: 100%;
-    height: 100%;
-}
-.buttons {
-    display: flex;
-    margin-top: 1rem; 
-    gap: 1rem;
-}
-
-.buttons button {
-    padding: 0.5rem 1rem;
-    border: none; 
-    border-radius: 5px; 
-    font-size: 1rem; 
-    cursor: pointer;
-}
-
-button[type&#x3D;&quot;reset&quot;] {
-    background-color: var(--Niagara);
-    color: var(--White); 
-}
-
-button[type&#x3D;&quot;submit&quot;] {
-    background-color: var(--Port-gore); 
-    color: var(--White); 
-
-}
-/* RESPONSIVE */
-@media (max-width: 900px) {
-    .main{
-        grid-template-columns: repeat(1, 1fr); 
-    }
-    img{
-       display: none;
-    }
-    .info-card{
-        grid-column: span 1; 
-        align-items: center; 
-    }
-    form{
-        margin-top: 100px;
-    }
-}
-
-
-@media (max-width: 700px) {
-    .main{
-        grid-template-columns: repeat(1, 1fr); 
-        font-size: 15px;
-    }
-    img{
-      display: none;
-    }
-    .info-card{
-        grid-column: span 1;    
-    }
-    form{
-        display: flex;
-        flex-direction: column; 
-        gap: 1rem;
-        margin-top: 0px;
-    }
-    
-
-}
-</code></pre>
-    </div>
 
     <div class="tab-pane fade " id="tree">
         <div id="tree-container"></div>
